--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.116.1",
     "pandas>=2.3.2",
+    "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
 ]
