--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.116.1",
+    "numpy>=2.2.6",
     "pandas>=2.3.2",
     "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
