--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
+    "tabulate>=0.9.0",
 ]
 
 [tool.setuptools.packages.find]
