--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,14 @@ requires-python = ">=3.10"
 dependencies = [
     "click>=8.3.0",
     "fastapi>=0.116.1",
+    "jinja2>=3.1.6",
     "numpy>=2.2.6",
     "pandas>=2.3.2",
     "pyyaml>=6.0.2",
     "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
     "tabulate>=0.9.0",
+    "weasyprint>=66.0",
 ]
 
 [tool.setuptools.packages.find]
