--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,18 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "hashprep"
-version = "0.1.0"
-description = "Add your description here"
+description = "A library for dataset quality checks, preprocessing, and report generation"
 readme = "README.md"
 requires-python = ">=3.10"
+license = { file = "LICENSE" }
+
+authors = [
+    { name = "Aftaab Siddiqui (MaskedSyntax)", email = "aftaab@aftaab.xyz"}
+]
+
 dependencies = [
     "click>=8.3.0",
     "fastapi>=0.116.1",
@@ -16,6 +25,17 @@ dependencies = [
     "tabulate>=0.9.0",
     "weasyprint>=66.0",
 ]
+
+dynamic = ["version"]
+
+[tool.setuptools.dynamic]
+version = { attr = "hashprep.__version__" }
+
+[project.urls]
+Homepage = "https://github.com/cachevector/hashprep"
+Repository = "https://github.com/cachevector/hashprep"
+Documentation = "https://github.com/cachevector/hashprep"
+Issues = "https://github.com/cachevector/hashprep/issues"
 
 [tool.setuptools.packages.find]
 include = ["hashprep*"]
