refactor: modular architecture and automated fix suggestions (#29)
- Restructured project into core, interfaces, utils, and preparers
- Renamed Issues to Issue and centralized check registration
- Added skewness detection for numeric columns
- Implemented SuggestionProvider and CodeGenerator for automated fixes
- Enhanced HTML reports with minimal and neubrutalism themes
- Updated CLI to support themes and code generation
- Moved type inference to utils and cleaned up duplicated logic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,4 +43,4 @@ Issues = "https://github.com/cachevector/hashprep/issues"
 include = ["hashprep*"]
 
 [project.scripts]
-hashprep = "hashprep.cli.main:cli"
+hashprep = "hashprep.interfaces.cli.main:cli"
