refactor: switch from difflib to fuzzybunny for fuzzy matching
Replaced Python's built-in difflib with fuzzybunny (C++ implementation)
for fuzzy string matching in check name suggestions. Benefits:

- 8x faster performance (0.0125ms vs 0.0982ms per lookup)
- Better matching algorithm (Levenshtein distance)
- Uses our own fuzzybunny library

Also lowered suggestion threshold from 0.6 to 0.4 for more helpful
suggestions on partial matches.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ authors = [
 dependencies = [
     "click>=8.3.0",
     "fastapi>=0.116.1",
+    "fuzzybunny",
     "jinja2>=3.1.6",
     "matplotlib>=3.10.6",
     "numpy>=2.2.6",
