feat: add edge case tests, GitHub Actions CI, and ruff linting
- Add 37 edge case tests covering empty DataFrames, constant columns,
  infinite values, correlation edge cases, leakage, drift, and more
- Add GitHub Actions CI workflow (pytest on Python 3.10-3.12, ruff lint)
- Add ruff configuration with sensible defaults for the project
- Add ruff as dev dependency
- Fix all ruff lint issues (unused imports, re-exports, unused vars)
- Apply ruff formatting across the entire codebase

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,33 @@ include = ["hashprep*"]
 [dependency-groups]
 dev = [
     "pytest>=9.0.2",
+    "ruff>=0.8.0",
 ]
 
 [project.scripts]
 hashprep = "hashprep.interfaces.cli.main:cli"
+
+[tool.ruff]
+target-version = "py310"
+line-length = 120
+
+[tool.ruff.lint]
+select = [
+    "E",    # pycodestyle errors
+    "W",    # pycodestyle warnings
+    "F",    # pyflakes
+    "I",    # isort
+    "UP",   # pyupgrade
+    "B",    # flake8-bugbear
+    "SIM",  # flake8-simplify
+]
+ignore = [
+    "E501",   # line too long (handled by formatter)
+    "B905",   # zip without strict (requires 3.10+)
+    "SIM102", # collapsible-if (elif + nested if is often more readable)
+    "SIM108", # ternary operator (readability preference)
+    "UP007",  # Optional[X] -> X | None (keep for 3.10 compat)
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["hashprep"]
